[package]
name = "secenv"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "../../docs/README.md"
categories = ["command-line-utilities"]
description = { workspace = true }

[features]
default = []

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
clap-markdown = { workspace = true }
serde = { workspace = true }
hocon = { workspace = true }
anyhow = { workspace = true }
path-clean = { workspace = true }
dirs = { workspace = true }
rpassword = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
sequoia-openpgp = { workspace = true }
once_cell = { workspace = true }